# AWS-IoT-Core-Fleet-Provisioning-ESP32-IDF

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  hello_world_main.c
